...
                android:text=""
                android:textSize="22sp"
                android:layout_toEndOf="@+id/emailLabel"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:visibility="invisible"
                android:id="@+id/editEmailText"
                android:inputType="textEmailAddress"
                android:background="@color/primary_blue"
                tools:ignore="LabelFor" />

            <Button

                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/editEmailBtn"
                android:layout_marginStart="5dp"
                android:text="Edit"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                tools:ignore="HardcodedText" />

...
                tools:ignore="HardcodedText" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Edit"
                android:id="@+id/editPassBtn"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

...

            <Spinner
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:textColor="#292929"
                android:textSize="22sp"
                android:id="@+id/spinner"
                android:spinnerMode="dropdown"
                android:touchscreenBlocksFocus="false"
                android:visibility="gone"
                android:layout_alignTop="@+id/editMajorBtn"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Edit"
...
                android:textColor="#424242"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:text="Bio: "
                android:id="@+id/bio"
                android:layout_alignTop="@+id/editBioText"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="230dp"
...
                tools:ignore="Deprecated,TextViewEdits" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Edit"
                android:id="@+id/editBioBtn"
                android:layout_alignTop="@+id/editBioText"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

...
