<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/buttontwo"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_gravity="center">

        <ImageView android:src="@drawable/buzzmovie3"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="-20dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Your Username"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="Login"
            android:onClick="loginButtonPressed"
            tools:ignore="HardcodedText" />
        <Button
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Cancel"
            android:onClick="cancelButtonPressed"
            tools:ignore="HardcodedText" />

        <TextView android:id="@+id/logText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Need an account? Create one"
            android:gravity="center"
            android:textSize="16dip"
            android:onClick="logTextClicked"
            tools:ignore="HardcodedText,SpUsage" />
        <TextView android:id="@+id/forgotPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Forgot Password?"
            android:gravity="center"
            android:textSize="16dip"
            android:onClick="pwButton"
            tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>
</ScrollView>